--- a/screen.css
+++ b/screen.css
@@ -3,6 +3,7 @@ body
     margin-right: 10%;
     margin-left: 10%;
     background-color: #505150;
+    color:antiquewhite;
 }
 
 h1
@@ -29,4 +30,25 @@ p
 .inactive
 {
     opacity: 0.3;
+}
+
+img:hover
+{
+    border: 5px solid blue;
+}
+
+p:hover 
+{
+    color: #94d1df;
+}
+
+h1:hover
+{
+    color: navy;
+}
+
+.moon
+{
+    width: 40%;
+    height: auto;
 }
